--- a/src/app/sprint/edit/edit.component.html
+++ b/src/app/sprint/edit/edit.component.html
@@ -1,50 +1,69 @@
-<div class="sprintTableWrapper">
-
-  <div style="margin:20px; display:inline-block">
-    <div style="float:left;">
-      <button class="addBtn" (click)="addFeature()">+</button>
-    </div>
-    <div style="float:left; height:70px;">
-      <input style="min-height:70px;" placeholder="Feature" [(ngModel)]="featureTitle"/>
-    </div>
-  </div>
-
+<div class="sprintTableWrapper" #tableWrapper>
   <table class="sprintTable">
-    <div class="scroll">
       <tbody>
-        <div *ngFor="let feature of features">
+        <div *ngFor="let feature of features; let f = index" [attr.data-index]="f">
           <tr>
             <td>
               <h1>Feature</h1>
 
+
               <div class="feature">
                 <h1>{{feature}}</h1>
+
+                <div style="inline-block; float:left;">
+                  <div>
+                    <label for="project">Project</label>
+                  </div>
+
+                  <div>
+                    <input id="project" style="width:50px;"/>
+                  </div>
+
+                </div>
+
+                <div style="inline-block; float:right;">
+                  <div>
+                    <label for="estimate">Estimate</label>
+                  </div>
+
+                  <div>
+                    <input id="estimate" style="width:50px;"/>
+                  </div>
+                </div>
+
               </div>
             </td>
 
             <td>
               <h1>To do</h1>
 
-              <div style=" display:inline-block">
+              <div style="margin-bottom: 100px; width:100%;">
                 <div style="float:left;">
                   <button class="addBtn" (click)="addTask()">+</button>
                 </div>
                 <div style="float:left; height:70px;">
-                  <input style="min-height:70px;" placeholder="Task" [(ngModel)]="taskTitle"/>
+                  <input style="width:60px; min-height:34px;" placeholder="Task" [(ngModel)]="taskTitle"/>
                 </div>
               </div>
 
-              <div class="task" *ngFor="let task of tasks">
+              <div *ngFor="let task of tasks; let i = index" [attr.data-index]="i" id="{{f}}{{i}}" class="task" (dragstart)="dragStart($event)" draggable="true">
                 <h3>{{task}}</h3>
               </div>
 
-            <td><h1>Development</h1></td>
+            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)"><h1>Development</h1></td>
             <td><h1>Review</h1></td>
             <td><h1>Testing</h1></td>
             <td><h1>Closed</h1></td>
           </tr>
         </div>
         </tbody>
-      </div>
     </table>
+  <div class="addFeature">
+    <div style="float:left;" >
+      <button class="addBtn" style="height:40px;" (click)="addFeature()">+</button>
+    </div>
+    <div style="float:left; height:40px;">
+      <input style="min-height:34px;" placeholder="Feature" [(ngModel)]="featureTitle"/>
+    </div>
+  </div>
 </div>
