--- a/src/styles.css
+++ b/src/styles.css
@@ -2,43 +2,41 @@ html, body {
   width:100%;
   height:100%;
   background:lightgrey;
-
+  overflow:hidden;
 }
-
-.sprintTableWrapperHeader {
-  display:inline-block;
-  position:absolute;
-  left:165px;
-  top:88px;
-}
-
-.sprintTableHeader {
-}
-
 
 .sprintTableWrapper {
   display:inline-block;
-
+  overflow:scroll;
   position:absolute;
   left:165px;
-  top:120px;
+  top:85px;
+
+  width:1050px;
+  height:400px;
+
 }
 
 .sprintTable {
-  width:90%;
+  width:100%;
 }
 
 th, td, tr {
-  width:700px;
+  min-width:300px;
   border: 5px solid black;
 }
 
 .feature {
+  padding:10px;
   display:block;
   width:200px;
   height:200px;
   border:3px solid black;
   background-color: white;
+}
+
+.feature h1 {
+  text-align:center;
 }
 
 .task {
@@ -50,10 +48,34 @@ th, td, tr {
   background-color: white;
 }
 
+.addFeature {
+  position:fixed;
+  top:400px;
+  margin:15px;
+  display:inline-block;
+}
+
 .addBtn {
+  line-height:10px;
+  text-align:vertical;
   font-size:30px;
   color:white;
   background-color:green;
-  margin-bottom:20px;
-  padding:20px;
+  width:40px;
+  height:40px;
 }
+
+label {
+  display:inline-block;
+}
+
+.inputDiv {
+  height: 16px;
+  margin-bottom:10px;
+}
+
+form label, form input {
+  float:right;
+}
+
+
