--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div id="topBarWrapper">
+
+  <img class="logo" src="assets/images/TrackerLogo.png" />
+
+
   <form style="float:right; margin:0px;" [formGroup]="loginForm">
     <div class="inputDiv">
       <input id="username" style="width:150px;" [formControl]="usernameField"/>
