--- a/src/app/sprint/edit/edit.component.html
+++ b/src/app/sprint/edit/edit.component.html
@@ -1,9 +1,9 @@
 <div id="sideBarWrapper">
   <div class="addFeature">
-    <div style="float:left;" >
-      <button class="addBtn" style="height:40px;" (click)="addFeature()">+</button>
-    </div>
-    <div style="float:left; height:40px;">
+
+    <button class="addBtn" style="height:40px;" (click)="addFeature()">+</button>
+
+    <div style="float:right; height:40px;">
       <input style="width: 100px; min-height:34px;" placeholder="Feature" [(ngModel)]="featureTitle"/>
     </div>
   </div>
