--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,8 @@ th, td, tr {
 .task {
   display:inline-block;
   padding: 5px;
-  width:100px;
-  height:100px;
+  width:200px;
+  height:200px;
   border:3px solid black;
   background-color: white;
 }
@@ -87,5 +87,28 @@ label {
 form label, form input {
   float:right;
 }
+
+.timerInput {
+  left:left;
+  width:30px;
+  position:relative;
+  top:50%;
+  transform:translate(0, -50%);
+}
+
+.timerBtn {
+  width:50px;
+  height:50px;
+  float:right;
+
+  animation:rotate 5s infinite linear;
+}
+
+@keyframes rotate{
+  0 {transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
+}
+
+
 
 
