--- a/src/styles.css
+++ b/src/styles.css
@@ -105,7 +105,7 @@ form label, form input {
 }
 
 @keyframes rotate{
-  0 {transform:rotate(0deg);}
+  0% {transform:rotate(0deg);}
   100% {transform:rotate(360deg);}
 }
 
