--- a/src/app/sprint/edit/edit.component.html
+++ b/src/app/sprint/edit/edit.component.html
@@ -38,9 +38,8 @@
                   </div>
 
                   <div>
-                    <input id="project{{f}}" class="project" style="width:50px;"  />
+                    <input #projectInput id="project{{f}}" class="project" style="width:50px;"  />
                   </div>
-
                 </div>
 
                 <div style="inline-block; float:right;">
@@ -56,7 +55,7 @@
               </div>
             </td>
 
-            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)">
+            <td #toDo class="ToDo" (dragover)="dragOver($event)" (drop)="dragDrop($event, feature)">
               <h1>To do</h1>
 
               <div style="margin-bottom: 100px; width:100%;">
@@ -68,7 +67,7 @@
                 </div>
               </div>
 
-              <div *ngFor="let task of feature.tasks; let t = index" [attr.data-index]="t" id="{{f}}{{t}}" class="task" (dragstart)="dragStart($event)" draggable="true">
+              <div #tasks *ngFor="let task of feature.tasks; let t = index" [attr.data-index]="t" id="{{task.id}}" class="task" (dragstart)="dragStart($event)" draggable="true">
                 <h4>{{task.title}}</h4>
                 <div style="height:50px">
                   <input id="timerInput{{f}}{{t}}" class="timerInput"/>
@@ -76,10 +75,10 @@
                 </div>
               </div>
             </td>
-            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)"><h1>Development</h1></td>
-            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)"><h1>Review</h1></td>
-            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)"><h1>Testing</h1></td>
-            <td (dragover)="dragOver($event)" (drop)="dragDrop($event)"><h1>Closed</h1></td>
+            <td #development class="Development" (dragover)="dragOver($event)" (drop)="dragDrop($event, feature)"><h1>Development</h1></td>
+            <td #review class="Review" (dragover)="dragOver($event)" (drop)="dragDrop($event, feature)"><h1>Review</h1></td>
+            <td #testing class="Testing" (dragover)="dragOver($event)" (drop)="dragDrop($event, feature)"><h1>Testing</h1></td>
+            <td #closed class="Closed" (dragover)="dragOver($event)" (drop)="dragDrop($event, feature)"><h1>Closed</h1></td>
           </tr>
         </div>
         </tbody>
